
  * Summary of tag changes:
    + Removed:
      - upstream-version-not-numeric

  * checks/*:
    + [NT] Rename all checks to include the extension ".pm".
      (Closes: #710405)
    + [JW] Fix typos in several files.
  * checks/binaries.pm:
    + [NT] Also check for the presence of "mcount" to detect
      whether a binary was compiled with profiling.
      (Closes: #712124)
  * checks/cruft.pm:
    + [NT] Revise a few tests that relied on file(1) on text files.
    + [NT] Apply patches from Bastien Roucariès to fix some false
      positives in the GDFL related checks.  (Closes: #711119)
    + [NT] Show the full path with source-contains-unsafe-symlink
      rather than just the "basename".
  * checks/fields.{desc,pm}:
    + [NT] Fix typo, thanks to Adrien Cunin.
    + [NT] Retire upstream-version-not-numeric which can no longer
      be emitted.  Versions that would previously trigger this tag
      will now trigger bad-version-number instead.
    + [NT] Properly quote package names used in regular expressions.
      Thanks to Mattias Ellert for the report.  (Closes: #714427)

  * coll/*:
    + [NT] Set "Auto-Remove: yes" on several collections to
      reduce the "inode pressure" on lintian.d.o.
    + [NT] Reduce the number of inodes used by removing some files,
      when these are empty.
  * coll/debfiles:
    + [NT] Remove test of the presence of unpacked.
  * coll/file-info{,.desc}:
    + [NT] Disable "ascii" test in file(1).  For some packages this
      may greatly reduce the overhead of running the file-info
      collection.
  * coll/hardening-info:
    + [NT] Skip files in usr/lib/debug/.

  * data/binaries/embedded-libs:
    + [RG] Check for embedded copies of libraw.  (Closes: #711090)
  * data/fields/obsolete-packages:
    + [NT] Add texi2html.  Thanks to Ryan Kavanagh for the report.
      (Closes: #710466)
  * data/scripts/interpreters:
    + [NT] Add plackup (libplack-perl) as a known interpreter.  Thanks