@@ -12,6 +12,9 @@ lintian (2.5.14) UNRELEASED; urgency=low
     + [NT] Also check for the presence of "mcount" to detect
       whether a binary was compiled with profiling.
       (Closes: #712124)
+    + [NT] Ignore "teH" when checking for spelling mistakes in
+      ELF binaries.  Thanks to Ryan Kavanagh for the report.
+      (Closes: #711207)
   * checks/cruft.pm:
     + [NT] Revise a few tests that relied on file(1) on text files.
     + [NT] Apply patches from Bastien Roucariès to fix some false
